# pyproject

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.txt  addon_21.py  addon_22.py  addon_23.py  addon_24.py  addon_25.py  addon_26.py  addon_27.py  addon_28.py  addon_29.py  addon_30.py  addon_31.py  addon_32.py  addon_33.py  addon_34.py  addon_35.py  addon_36.py  addon_37.py  addon_38.py  addon_39.py  addon_40.py  addon_41.py  addon_42.py  addon_43.py  addon_44.py  addon_45.py  addon_46.py  addon_47.py  addon_48.py  addon_49.py  addon_50.py  addon_51.py  addon_52.py  addon_53.py  addon_54.py  addon_55.py  (+52 more)
.github/workflows/: ci.yml
src/chatbot/: __init__.py  bot.py  config.py  database.py  main.py  memory.py  nlp.py  utils.py
tests/: __init__.py  test_bot.py  test_memory.py  test_nlp.py
