[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot"
version = "1.0.0"
authors = [
    { name = "Nikhil Tomar", email = "nikhiltomarsan2712@gmail.com" }
]
description = "A professional, modular AI chatbot project."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
chatbot = "chatbot.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
